about and home page

--- a/src/app/aboutme/aboutme.component.css
+++ b/src/app/aboutme/aboutme.component.css
@@ -42,5 +42,5 @@
     line-height: 1.6;
     margin-bottom: 20px;
     font-family: 'Poppins', sans-serif;
-    color: #b4b4b8;
+    color: #555;
 }
