--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,3 +1,16 @@
+<!-- Navigation Bar -->
+<nav class="navbar">
+    <div class="logo"></div>
+    <ul class="nav-links">
+        <li><a [routerLink]="['/']">Home</a></li>
+        <li><a [routerLink]="['/about']">About Me</a></li>
+
+        <li><a href="#">Skills</a></li>
+        <li><a [routerLink]="['/experience']">Experience</a></li>
+        <li><a href="#">Contact Me</a></li>
+    </ul>
+    <button class="resume-btn">Resume</button>
+</nav>
 <div class="about-container">
     <figure class="illustration">
         <img src="assets/intro.png" alt="Illustration of a person">
