--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,21 @@
-<!-- Navigation Bar
+<!-- Navigation Bar -->
 <nav class="navbar">
-    <div class="logo">Personal</div>
+    <div class="logo"></div>
     <ul class="nav-links">
+        <li><a [routerLink]="['/']">Home</a></li>
         <li><a [routerLink]="['/about']">About Me</a></li>
 
         <li><a href="#">Skills</a></li>
-        <li><a href="#">Project</a></li>
+        <li><a [routerLink]="['/experience']">Experience</a></li>
         <li><a href="#">Contact Me</a></li>
     </ul>
     <button class="resume-btn">Resume</button>
-</nav> -->
-
+</nav>
 <!-- Hero Section -->
 <section class="hero">
     <div class="hero-text">
         <h1>Hello I’am <span class="bold">Ann</span></h1>
-        <h2><span class="bold">Full-Stack </span> <span class="bold">Developer</span></h2>
+        <h2><span class="bold">Full-Stack </span> <span class="outlined">Developer</span></h2>
         <p>
             I'm Ann Mary John, a full-stack developer with 3+ years of experience in building scalable web and mobile
             apps. Skilled in c#, .NET, Flutter, SQL Server, and Agile practices, focused on performance and user-centric
