--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,60 @@
 /* Apply Poppins globally */
 * {
     font-family: 'Poppins', sans-serif;
+    margin: 0px;
+}
+
+
+.footer {
+    padding: 20px;
+    background-color: #2c2f33;
+    color: #dcdcdc;
+    text-align: center;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    border-top: 1px solid #444;
+}
+
+.footer-left,
+.footer-right {
+    flex: 1;
+}
+
+.footer-left p {
+    margin: 5px 0;
+}
+
+.footer-right {
+    text-align: right;
+}
+
+.social-media {
+    margin-bottom: 10px;
+}
+
+.social-media p {
+    margin: 0 0 10px 0;
+}
+
+.icons a {
+    margin: 0 5px;
+    display: inline-block;
+}
+
+.icons img {
+    width: 24px;
+    height: 24px;
+}
+
+.footer-bottom {
+    margin-top: 20px;
+    border-top: 1px solid #444;
+    padding-top: 10px;
 }
