--- a/src/app/experiance/experiance.component.html
+++ b/src/app/experiance/experiance.component.html
@@ -4,8 +4,7 @@
     <ul class="nav-links">
         <li><a [routerLink]="['/']">Home</a></li>
         <li><a [routerLink]="['/about']">About Me</a></li>
-
-        <li><a href="#">Skills</a></li>
+        <li><a [routerLink]="['/skills']">Skills</a></li>
         <li><a [routerLink]="['/experience']">Experience</a></li>
         <li><a href="#">Contact Me</a></li>
     </ul>
